Fix uncollapsing

--- a/css/comment-collapser.css
+++ b/css/comment-collapser.css
@@ -1,3 +1,9 @@
+
+.expander {
+    margin-right: 3px;
+    padding: 1px;
+}
+
 .comment {
 	position: relative;
 }
